2011-08-08  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.[ch], x_screen.c: Application escape mode ("CSI ? 7727 h"
	  "CSI ? 7727 l" sequences are supported.

	* mkf/libtbl/table/*.table: CONV_XXX_TO_XXX is declared as static.

	* ml_vt100_parser.c: Application keypad, application cursor, application escape,
	  bracketed paste and mouse report modes are reset by DECSTR.

2011-08-07  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.tp: Updated.

	* x_window_win32.c: Position in WM_MOUSEWHEEL event is processed by
	  ScreenToClient().
	  (Thanks to Iwamoto Kouichi san)

	* ml_vt100_parser.c, ml_term.[ch], x_screen.c: "CSI ? 1002 h" "CSI ? 1003 h"
	  "CSI ? 1002 l" "CSI ? 1003 l" sequences are supported.

	* kiklib/configure.in: Not only if posix_openpt and /dev/ptmx exist but
	  also if they work is checked.

	* Makefile.in: 'make uninstall' is supported.

2011-08-02  Araki Ken  <arakiken@users.sf.net>

	* x_window_win32.c: Width and height of window decorations like caption
	  are calculated by difference between WindowRect and ClientRect.

2011-08-01  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: The way of parsing intermediate or parameter
	  characters is improved.

2011-07-31  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.win32, doc/ja/README.win32: Updated.

	* x_font_win32.c, x_window_win32.c:
	  "Tera Special" font is used for DEC Special characters.

2011-07-30  Araki Ken  <arakiken@users.sf.net>

	* gtk/vte.c: Fixed typo.

	* ml_vt100_parser.c: CSI sequence inside OSC is interpreted.

2011-07-27  Araki Ken  <arakiken@users.sf.net>

	* vte.c: A problem which overwrites disp.gc->gc more than once and
	  causes leak of GC resource is fixed.

	* ml_screen.h: ml_screen_logical_visual_is_reversible() is added.

	* ml_logical_visual.[ch]: "is_reversible" flag is added to ml_logical_visual_t.

2011-07-25  Araki Ken  <arakiken@users.sf.net>

	* x_window.c: Fixed typo in x_window_ft_draw_string8().