@@ -160,6 +160,8 @@ int  ml_line_bidi_logical( ml_line_t *  line) ;
 
 int  ml_bidi_convert_logical_char_index_to_visual( ml_line_t *  line , int  char_index ,
 	int *  ltr_rtl_meet_pos) ;
+
+int  ml_bidi_convert_visual_char_index_to_logical( ml_line_t *  line , int  char_index) ;
 #endif
 
 int  ml_line_is_rtl( ml_line_t *  line) ;
